# bevy_cross_platform

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: camera.rs  lib.rs  lifetime.rs  player.rs  ui.rs  world.rs
src/third_person_camera/: gamepad.rs  mod.rs  mouse.rs  touch.rs
src/virtual_joystick/: input.rs  mod.rs
static/: index.html
www/: 1.js  index.html  index.js  loader.js
www/css/: index.css
