[package]
name = "bevy-example-3d"
description = "Rust, WebAssembly, and Webpack Bevy project."
version = "0.1.0"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.45"
bevy = { version = "0.11.2" }
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = { version = "0.22.0", features = ["debug-render-3d"] }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
